--- a/index.html
+++ b/index.html
@@ -1,88 +1,126 @@
-<!DOCTYPE html>
 <html>
-<head>
-  <meta charset="UTF-8">
-  <title>TWEENIFY</title>
-  <link rel="stylesheet" href="styles.css">
-  <script type="text/javascript" src="paper.js"></script>
-  <script type="text/paperscript" canvas="canvas">
-    // we want to start a path that renders a series of segments(will eventually turn into triangles)
-    // the segments have a random angle and random length(might just scale a bit)
-    // segments start as white and fade to gray
-    var triangles = [];
-    var numTriangles = 50;
-    var randomColorNumber;
-    var newTriangle;
-
-    function randomNumberGenerator(){
-      randomNumber = Math.floor(Math.random()* 100);
-    }
-
-    function randomColorNumGenerator(){
-      colorArray = []
-      for(var i = 0; i < 6; i++){
-        randomColorNumber = Math.floor(Math.random()*15)
-        if(randomColorNumber === 10){
-          colorArray.push('A');
-        }
-        else if(randomColorNumber === 11){
-          colorArray.push('B');
-        }
-        else if(randomColorNumber === 12){
-          colorArray.push('C');
-        }
-        else if(randomColorNumber === 13){
-          colorArray.push('D');
-        }
-        else if(randomColorNumber === 14){
-          colorArray.push('E');
-        }
-        else if(randomColorNumber === 15){
-          colorArray.push('F');
-        }
-        else{colorArray.push(randomColorNumber)}
-      }
-      randomColorNumber = '#'+ colorArray.join("");
-    }
-
-    for(var i =0; i < 60; i++){
-      randomNumberGenerator();
-      randomColorNumGenerator();
-      randomPoint = new Point(900, 900) * Point.random();
-      newTriangle = new Path.RegularPolygon(randomPoint, 3, randomNumber);
-      newTriangle.strokeColor = randomColorNumber;
-      newTriangle.strokeWidth = 5;
-      triangles.push(newTriangle);
-      pathExists = true;
-    }
-
-    function onFrame(event){
-      for(var i =0; i< triangles.length; i++){
-        if(i % 2 === 0){
-          triangles[i].strokeColor.hue += 1;
-          triangles[i].rotate(1);
-          triangles[i].position.x += triangles[i].bounds.width/40;
-          if(triangles[i].bounds.left > view.size.width ){
-            triangles[i].position.x = -triangles[i].bounds.width;
-          }
-        }
-        else{
-          triangles[i].strokeColor.hue += 4;
-          triangles[i].rotate(2);
-          triangles[i].position.x += triangles[i].bounds.width/40;
-          if(triangles[i].bounds.left > view.size.width ){
-            triangles[i].position.x = -triangles[i].bounds.width;
-          }
-        }
-
-      }
-    }
-
+  <head>
+    <title>Rory Grant</title>
+    <link rel="stylesheet" href="app.css" media="screen" title="no title" charset="utf-8">
+    <link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
+    <script src="http://code.jquery.com/jquery-2.1.3.min.js"></script>
+    <script src="javascripts/handlebars.js"></script>
+    <script src="javascripts/app.js"></script>
+  </head>
+  <body>
+    <div class="jumbotron">
+      <div class="logo-header">
+        <img src="images/logo_white_outline.png"/>
+        <div class="name inverted">
+          <p>RORY GRANT</p>
+          <p>programmer.designer.doodler.</p>
+        </div>
+      </div>
+    </div>
+    <div class="container" id="project-index">
+      <ul class="grid">
+      	<li id="puppy-play-date">
+      		<a>
+      			<span class="icon"></span>
+      			<h3 class="title">PuppyPlayDate.co</h3>
+      			<span class="category">Canine Compatibility Matching Service</span>
+      		</a>
+      	</li>
+      	<li id="march-madness">
+      		<a>
+      			<span class="icon"></span>
+      			<h3 class="title">Bracketology</h3>
+      			<span class="category">NCAA Stat Comparison Application</span>
+      		</a>
+      	</li>
+      	<li id="fellow-tracker">
+      		<a>
+      			<span class="icon"></span>
+      			<h3 class="title">Fellow Tracker</h3>
+      			<span class="category">Student Progress Tracking Tool</span>
+      		</a>
+      	</li>
+      </ul>
+    </div>
+  </body>
+  <script id="puppy-playdate-template" type="text/x-handlebars-template">
+    <div class="project-container">
+      <div class="project-header">
+        <h1>{{projectTitle}}</h1>
+        <p>{{description}}</p>
+        <a href={{siteLink}}>Link To Site</a>
+        <a href={{githubLink}}>Link To GitHub</a>
+      </div>
+      <div class="column">
+        <div class="content">
+          <h2>Our Stack</h2>
+          <p>{{backEnd}}</p>
+          {{#if frontEnd}}
+            <p>{{frontEnd}}</p>
+          {{/if}}
+          <p>{{process}}</p>
+        </div>
+        <div class="content">
+          <h2>Architecture</h2>
+          <p>{{architecture}}</p>
+          <img src={{architectureImg}} alt="architecture" />
+        </div>
+        <div class="content">
+          <h2>{{featureOne}}</h2>
+          <p>{{featureOneDescription}}</p>
+          <img src={{featureOneImg}} alt="live messages" />
+        </div>
+      </div>
+      {{#if featureTwo }}
+      <div class="column">
+        <div class="content">
+          <h2>{{featureTwo}}</h2>
+          <p>{{featureTwoDescription}}</p>
+          <img src={{featureTwoImg}} alt="suggested dogs" />
+        </div>
+        {{#if featureThree}}
+        <div class="content">
+          <h2>{{featureThree}}</h2>
+          <p>{{featureThreeDescription}}</p>
+          <img src={{featureThreeImg}} alt="map" />
+        </div>
+        {{/if}}
+      </div>
+      {{/if}}
+    </div>
   </script>
-</head>
-<body>
-  <div id="window">
-    <canvas id="canvas" height="300" width= "500" resize hidpi="off" style="background:black"></canvas>
-  </div>
-</body>
+  <script id="project-template" type="text/x-handlebars-template">
+    <div class="project-container">
+      <div class="project-header">
+        <h1>{{projectTitle}}</h1>
+        <p>{{description}}</p>
+        <a href={{siteLink}}>Link To Site</a>
+        <a href={{githubLink}}>Link To GitHub</a>
+      </div>
+      <div class="column">
+        <div class="content">
+          <h2>Our Stack</h2>
+          <p>{{backEnd}}</p>
+          {{#if frontEnd}}
+            <p>{{frontEnd}}</p>
+          {{/if}}
+          {{#if process}}
+          <p>{{process}}</p>
+          {{/if}}
+        </div>
+        <div class="content">
+          <h2>Architecture</h2>
+          <p>{{architecture}}</p>
+          <img src={{architectureImg}} alt="architecture" />
+        </div>
+      </div>
+      <div class="column">
+        <div class="content">
+          <h2>{{featureOne}}</h2>
+          <p>{{featureOneDescription}}</p>
+          <img src={{featureOneImg}} alt="live messages" />
+        </div>
+      </div>
+    </div>
+  </script>
 </html>
