--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
     <title>Rory Grant</title>
     <link rel="stylesheet" href="app.css" media="screen" title="no title" charset="utf-8">
-    <link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Lato:100,400' rel='stylesheet' type='text/css'>
     <script src="http://code.jquery.com/jquery-2.1.3.min.js"></script>
     <script src="javascripts/handlebars.js"></script>
     <script src="javascripts/app.js"></script>
