changing backgrounds, coloring, accounting for changes in data

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <div class="jumbotron">
       <div class="logo-header">
-        <img src="images/logo_white_outline.png"/>
+        <img src="images/logo_lt_outline.png"/>
         <div class="name inverted">
           <p>RORY GRANT</p>
           <p>programmer.designer.doodler.</p>
